Replace CDN images with reliable Unsplash stock photos
- Replaced navidiku.rs CDN images (hotlink protected) with Unsplash
- Added SVG tooth icon as logo placeholder
- Updated favicons with emoji tooth
- All images now load reliably on external hosts

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta property="og:description" content="Vrhunska stomatologija u srcu Beograda. 11 godina iskustva, bezbolne procedure, moderna oprema.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://beowhitedent.rs">
-  <meta property="og:image" content="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1629909613654-28e377c37b09?w=1200&h=630&fit=crop">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
-  <link rel="apple-touch-icon" href="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦷</text></svg>">
+  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦷</text></svg>">
 
   <title>BeoWhiteDent - Stomatološka ordinacija Dorćol | Implanti, Estetika, Ortodoncija</title>
 
@@ -33,7 +33,7 @@
     "@context": "https://schema.org",
     "@type": "Dentist",
     "name": "BeoWhiteDent",
-    "image": "https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg",
+    "image": "https://images.unsplash.com/photo-1629909613654-28e377c37b09?w=1200&h=630&fit=crop",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Skender Begova 61a",
@@ -63,7 +63,7 @@
   <nav class="nav" role="navigation" aria-label="Glavna navigacija">
     <div class="nav-container">
       <a href="index.html" class="nav-logo" aria-label="BeoWhiteDent - Početna">
-        <img src="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg" alt="BeoWhiteDent logo" width="44" height="44">
+        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="color: var(--accent-primary)"><path d="M12 5.5c-1.5-1.5-4-2-6 0s-2 4.5 0 6l6 6 6-6c2-1.5 2-4 0-6s-4.5-1.5-6 0z"/><path d="M12 5.5V12"/></svg>
         <div class="nav-logo-text">
           <span>BeoWhiteDent</span>
           <span>Stomatologija</span>
