--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦷</text></svg>">
 
   <title>Kontakt - BeoWhiteDent | Zakažite Termin</title>
   <link rel="stylesheet" href="styles.css">
@@ -24,7 +24,7 @@
   <nav class="nav">
     <div class="nav-container">
       <a href="index.html" class="nav-logo">
-        <img src="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg" alt="BeoWhiteDent logo" width="44" height="44">
+        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="color: var(--accent-primary)"><path d="M12 5.5c-1.5-1.5-4-2-6 0s-2 4.5 0 6l6 6 6-6c2-1.5 2-4 0-6s-4.5-1.5-6 0z"/><path d="M12 5.5V12"/></svg>
         <div class="nav-logo-text">
           <span>BeoWhiteDent</span>
           <span>Stomatologija</span>
