--- a/usluge.html
+++ b/usluge.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦷</text></svg>">
 
   <title>Usluge i Cene - BeoWhiteDent | Implanti, Estetika, Ortodoncija</title>
   <link rel="stylesheet" href="styles.css">
@@ -24,7 +24,7 @@
   <nav class="nav">
     <div class="nav-container">
       <a href="index.html" class="nav-logo">
-        <img src="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg" alt="BeoWhiteDent logo" width="44" height="44">
+        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="color: var(--accent-primary)"><path d="M12 5.5c-1.5-1.5-4-2-6 0s-2 4.5 0 6l6 6 6-6c2-1.5 2-4 0-6s-4.5-1.5-6 0z"/><path d="M12 5.5V12"/></svg>
         <div class="nav-logo-text">
           <span>BeoWhiteDent</span>
           <span>Stomatologija</span>
@@ -138,7 +138,7 @@
             <a href="tel:+381638414484" class="btn btn-primary mt-4">Zakažite konsultacije</a>
           </div>
           <div class="service-detail-image">
-            <img src="https://cdn.navidiku.rs/firme/proizvodgalerija2/galerija55192/protetika-na-zubnim-implantima-97310-250x250.jpg" alt="Zubni implanti BeoWhiteDent" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1609840114035-3c981b782dfe?w=400&h=300&fit=crop" alt="Zubni implanti BeoWhiteDent" loading="lazy">
           </div>
         </div>
 
@@ -182,7 +182,7 @@
             <a href="tel:+381638414484" class="btn btn-primary mt-4">Zakažite termin</a>
           </div>
           <div class="service-detail-image">
-            <img src="https://cdn.navidiku.rs/firme/proizvodgalerija2/galerija56741/izbeljivanje-zuba-beo-white-dent-100239-250x250.jpg" alt="Izbeljivanje zuba" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1606811841689-23dfddce3e95?w=400&h=300&fit=crop" alt="Izbeljivanje zuba" loading="lazy">
           </div>
         </div>
 
@@ -225,7 +225,7 @@
             <a href="tel:+381638414484" class="btn btn-primary mt-4">Zakažite konsultacije</a>
           </div>
           <div class="service-detail-image">
-            <img src="https://cdn.navidiku.rs/firme/kuponi/k5346/fiksni-ortodontski-aparat-po-vilici-stomatoloska-ordinacija-beo-white-dent9111-380x210.jpg" alt="Ortodoncija - fiksni aparat" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1598256989800-fe5f95da9787?w=400&h=300&fit=crop" alt="Ortodoncija - fiksni aparat" loading="lazy">
           </div>
         </div>
 
@@ -268,7 +268,7 @@
             <a href="tel:+381638414484" class="btn btn-primary mt-4">Zakažite termin</a>
           </div>
           <div class="service-detail-image">
-            <img src="https://cdn.navidiku.rs/firme/kuponi/k992/krune-od-bezmetalne-keramike-stomatoloska-ordinacija-beo-white-dent4830-380x210.jpg" alt="Bezmetalne keramičke krunice" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?w=400&h=300&fit=crop" alt="Bezmetalne keramičke krunice" loading="lazy">
           </div>
         </div>
 
@@ -349,7 +349,7 @@
             <a href="tel:+381638414484" class="btn btn-primary mt-4">Zakažite pregled</a>
           </div>
           <div class="service-detail-image">
-            <img src="https://cdn.navidiku.rs/firme/proizvodgalerija2/galerija56743/kompozitni-ispuni-na-prednjim-zubima-100241-250x250.jpg" alt="Kompozitne plombe" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=400&h=300&fit=crop" alt="Kompozitne plombe" loading="lazy">
           </div>
         </div>
 
