--- a/o-nama.html
+++ b/o-nama.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦷</text></svg>">
 
   <title>O nama - BeoWhiteDent | Dr Jelena Đaković</title>
   <link rel="stylesheet" href="styles.css">
@@ -24,7 +24,7 @@
   <nav class="nav">
     <div class="nav-container">
       <a href="index.html" class="nav-logo">
-        <img src="https://cdn.navidiku.rs/firme/firmelogo/14354i.jpg" alt="BeoWhiteDent logo" width="44" height="44">
+        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="color: var(--accent-primary)"><path d="M12 5.5c-1.5-1.5-4-2-6 0s-2 4.5 0 6l6 6 6-6c2-1.5 2-4 0-6s-4.5-1.5-6 0z"/><path d="M12 5.5V12"/></svg>
         <div class="nav-logo-text">
           <span>BeoWhiteDent</span>
           <span>Stomatologija</span>
@@ -112,7 +112,7 @@
             </p>
           </div>
           <div class="fade-up">
-            <img src="https://cdn.navidiku.rs/firme/galerija5/s14354/stomatoloska-ordinacija-beo-white-dent-28307b.jpg" alt="BeoWhiteDent ordinacija" style="border-radius: var(--radius-lg); width: 100%;" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1629909615184-74f495363b67?w=600&h=400&fit=crop" alt="BeoWhiteDent ordinacija" style="border-radius: var(--radius-lg); width: 100%;" loading="lazy">
           </div>
         </div>
       </div>
@@ -274,13 +274,13 @@
 
         <div class="services-grid stagger" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
           <div class="fade-up" style="border-radius: var(--radius-lg); overflow: hidden;">
-            <img src="https://cdn.navidiku.rs/firme/galerija5/s14354/stomatoloska-ordinacija-beo-white-dent-28307b-1.jpg" alt="BeoWhiteDent enterijer" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1629909613654-28e377c37b09?w=400&h=300&fit=crop" alt="BeoWhiteDent enterijer" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
           </div>
           <div class="fade-up" style="border-radius: var(--radius-lg); overflow: hidden;">
-            <img src="https://cdn.navidiku.rs/firme/galerija5/s14354/stomatoloska-ordinacija-beo-white-dent-28307b-2.jpg" alt="BeoWhiteDent ordinacija" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1606811971618-4486d14f3f99?w=400&h=300&fit=crop" alt="BeoWhiteDent ordinacija" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
           </div>
           <div class="fade-up" style="border-radius: var(--radius-lg); overflow: hidden;">
-            <img src="https://cdn.navidiku.rs/firme/galerija5/s14354/stomatoloska-ordinacija-beo-white-dent-28307b-3.jpg" alt="BeoWhiteDent oprema" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?w=400&h=300&fit=crop" alt="BeoWhiteDent oprema" style="width: 100%; height: 200px; object-fit: cover;" loading="lazy">
           </div>
         </div>
       </div>
